--- a/1-portfolio/portfolio.html
+++ b/1-portfolio/portfolio.html
@@ -57,33 +57,88 @@
         </div>
     </header>
 
-
     <section>
-        <article class="fullscreen">
-            <h1 id="bigger">ELANA Lucas</h1>
-        </article>
-
         <article>
-            <div class="profile">
-
+            <div class="resume">
+                <div class="left-resume">
+                    <div class="resume-title">
+                        <h1>Lucas ELANA</h1>
+                    </div>
+                    <p>
+                        <strong>Contact</strong><br />
+                        45 rue des Doizelleries<br />
+                        Les Sorinières<br />
+                        France<br />
+                        Tel : 07.68.47.09.20<br />
+                        elanalucas.pro@gmail.com
+                    </p>
+                    <p>
+                        <strong>Languages</strong><br />
+                        French (native language)<br />
+                        English (hight level)<br />
+                        Russian (low level)<br />
+                    </p>
+                    <p>
+                        <strong>Skills</strong><br />
+                    </p>
+                    <p>
+                        <strong>Interests</strong><br />
+                        art and design<br />
+                        Web design<br />
+                        Tennis<br />
+                    </p>
+                </div>
+                <div class="right-resume">
+                    <div class="resume-title">
+                        <h1>IT Technician</h1>
+                    </div>
+                    <div class="resume-educ">
+                        <h1>Education</h1>
+                        <p>
+                            <strong>BTS SIO, a 2 year technical diploma in IT <br />(2024-2026)</strong><br />
+                            La Joliverie school, Saint Sébastien sur Loire
+                        </p>
+                        <p>
+                            <strong>High School Diploma <br />(2024)</strong><br />
+                            La Joliverie school, Saint Sébastien sur Loire
+                        </p>
+                    </div>
+                    <div class="resume-educ">
+                        <h1>Work Experience</h1>
+                        <p>
+                            <strong>BTS SIO, a 2 year technical diploma in IT <br />(2024-2026)</strong><br />
+                            La Joliverie school, Saint Sébastien sur Loire
+                        </p>
+                        <p>
+                            <strong>High School Diploma <br />(2024)</strong><br />
+                            La Joliverie school, Saint Sébastien sur Loire
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="link-btn">
+                <a href="#" id="scaling">Voir le CV</a>
             </div>
         </article>
 
         <article>
-            <div class="skills">
-
+            <h1>COMPETENCES</h1>
+            <div class="content skills">
+                a
             </div>
         </article>
 
         <article>
-            <div class="projects">
-
+            <h1>PROJETS</h1>
+            <div class="content project">
+                a
             </div>
         </article>
 
         <article>
-            <div class="Contact">
-
+            <h1>CONTACT</h1>
+            <div class="content contact">
+                a
             </div>
         </article>
     </section>
@@ -91,8 +146,6 @@
     <footer>
         footer
     </footer>
-
-    </div>
 
     <script>
         const toggleBtn = document.querySelector('.toggle-btn')
