--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     </section>
 
     <footer>
-        footer
+        <a href="#">Repository</a>
+        <a href="#">Informations</a>
+        <a href="#">Contact</a>
     </footer>
 
     </div>
