--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <section>
         <!-- pages disponibles à visiter -->
         <article class="pages-half" id="column-align">
-            <a href="/1-portfolio/portfolio.html">
+            <a href="pages/portfolio.html">
                 <h1>Portfolio</h1>
             </a>
-            <a href="/2-blog/blog.html">
+            <a href="pages/blog.html">
                 <h1>Blog</h1>
             </a>
         </article>
