--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,7 +19,7 @@
 
     <header>
         <div class="input-zone">
-            <a href="/index.html" class="home-btn" id="scaling">
+            <a href="../index.html" class="home-btn" id="scaling">
                 <i class="fa-solid fa-house"></i>
             </a>
             <div class="toggle-btn" id="scaling">
