--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <div class="overlay"></div>
 
     <header>
+        <div class="construction">
+            <p>Site en construction,</p>
+            <a href="https://sontacred.github.io/web-SIO/index.html">visiter l'ancien site</a>
+        </div>
         <div class="input-zone">
             <!-- <a href="#" class="home-btn" id="scaling">
                 <i class="fa-solid fa-house"></i>
